--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/header.css" th:href="@{/css/styles.css}">
-    <title>Header</title>
+    <title>로그인 시 헤더</title>
 </head>
 <body>
     <header>
@@ -26,9 +26,9 @@
 
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a href="/login"class="headerLoginBtn">Login</a>
-                <a href="/join"class="headerJoinBtn">Join us</a>
-                <a href="/cart"class="headerCartBtn">Cart</a>
+                <a href="/login"class="headerLoginBtn">로그인</a>
+                <a href="/join"class="headerJoinBtn">회원가입</a>
+                <a href="/cart"class="headerCartBtn">장바구니</a>
             </div>
 
             <!-- 검색 바 -->
