--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>결제 페이지</title>
-  <link rel="stylesheet" href="/static/css/order/order.css">
+  <link rel="stylesheet" th:href="@{/css/order/order.css}">
+
 </head>
 <body>
   <section class="addressSection">
