--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -9,72 +9,77 @@
 </head>
 <body>
   <h1>우측에 이름, 직급(담당업무)/비밀번호/이메일 변경 페이지로 이동</h1>
-
-
-  <section class="content">
-    <h1>회원가입 현황</h1>
-    <div class="date">
-      <button>1주일</button>
-      <button>1개월</button>
-      <button>6개월</button>
-      <input type="date">
-      ~ &nbsp; &nbsp;
-      <input type="date">
+  
+  <section class="content-box">
+    <div class="sideBar">
+      사이드바
     </div>
   
-    <div class="graph-box">
-  
-      <div class="sales"> 
-        <div>총 회원 수 : 00명</div>
-        <div>기간 중 가입 회원 수 : 00명</div>
-        <div>기간 중 탈퇴 회원수 : 00명</div>
+    <div class="content">
+      <h1>회원가입 현황</h1>
+      <div class="date">
+        <button>1주일</button>
+        <button>1개월</button>
+        <button>6개월</button>
+        <input type="date">
+        ~ &nbsp; &nbsp;
+        <input type="date">
       </div>
-  
-      <div class="content-box">
-        <div class="graph">
-          <div class="graph-title">
-            <span>거래액 그래프</span>
-            <span>클릭 된 버튼 / 기간</span>
-          </div>
-          <div class="graph-section">
-            <a href="#">그래프 그릴거예여</a>
-          </div>
+    
+      <div class="graph-box">
+    
+        <div class="sales"> 
+          <div>총 회원 수 : 00명</div>
+          <div>기간 중 가입 회원 수 : 00명</div>
+          <div>기간 중 탈퇴 회원수 : 00명</div>
         </div>
-  
-        <div class="salesRank">
-          <h2>최근 가입 회원</h2>
-          <table class="sales-table">
-            <tr>
-              <th>회원번호</th>
-              <td>회원 아이디</td>
-              <td>관심분야</td>
-              <td>문의 내용</td>
-            </tr>
-            <tr>
-              <th>2️⃣</th>
-              <td>책이름</td>
-              <td>매출량</td>
-              <td>상승 / 하강 화살표</td>
-            </tr>
-            <tr>
-              <th>3️⃣</th>
-              <td>책이름</td>
-              <td>매출량</td>
-              <td>상승 / 하강 화살표</td>
-            </tr>
-            <tr>
-              <th>4️⃣</th>
-              <td>책이름</td>
-              <td>매출량</td>
-              <td>상승 / 하강 화살표</td>
-            </tr>
-            <tr>
-              <th>5️⃣</th>
-              <td>책이름</td>
-              <td>매출량</td>
-              <td>상승 / 하강 화살표</td>
-            </tr>
-          </table>
+    
+        <div class="content-box">
+          <div class="graph">
+            <div class="graph-title">
+              <span>거래액 그래프</span>
+              <span>클릭 된 버튼 / 기간</span>
+            </div>
+            <div class="graph-section">
+              <a href="#">그래프 그릴거예여</a>
+            </div>
+          </div>
+    
+          <div class="salesRank">
+            <h2>최근 가입 회원</h2>
+            <table class="sales-table">
+              <tr>
+                <th>회원번호</th>
+                <td>회원 아이디</td>
+                <td>관심분야</td>
+                <td>문의 내용</td>
+              </tr>
+              <tr>
+                <th>2️⃣</th>
+                <td>책이름</td>
+                <td>매출량</td>
+                <td>상승 / 하강 화살표</td>
+              </tr>
+              <tr>
+                <th>3️⃣</th>
+                <td>책이름</td>
+                <td>매출량</td>
+                <td>상승 / 하강 화살표</td>
+              </tr>
+              <tr>
+                <th>4️⃣</th>
+                <td>책이름</td>
+                <td>매출량</td>
+                <td>상승 / 하강 화살표</td>
+              </tr>
+              <tr>
+                <th>5️⃣</th>
+                <td>책이름</td>
+                <td>매출량</td>
+                <td>상승 / 하강 화살표</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
