--- a/src/main/resources/static/css/admin/sales.css
+++ b/src/main/resources/static/css/admin/sales.css
@@ -2,20 +2,25 @@
   border: 1px solid black;
 }
 
-body{
-  width: 1800px;
-  height: 880px;
-  
+.content-box{
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.sideBar{
+  width: 300px;
+  height: 850PX;
 }
 
 .content{
-  margin-left: 300px;
   display: flex;
   flex-direction: column;
 }
 
 .date{
-  width: 1600px;
+  width: 1500px;
   height: 100px;
   display: flex;
   flex-direction: row;
@@ -40,20 +45,13 @@ body{
 .content-box{
   display: flex;
   justify-content: row;
-  margin-top: 50px;
-  height: 550px;
+  height: 700px;
 }
 
 .graph{
-  width: 1200px;
+  width: 1000px;
   height: 550px;
 }
-
-.graph-title{
-  display: flex;
-  flex-direction: row;
-}
-
 
 .salesRank{
   width: 500px;
@@ -67,27 +65,5 @@ body{
 
 .sales-table{
   width: 500px;
-  height: 440px;
+  height: 520px;
 }
-
-
-.cal-month,
-.cal-days,
-.cal-weekdays {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  align-items: center;
-}
-.cal-month-name {
-  grid-column-start: 2;
-  grid-column-end: 7;
-  text-align: center;
-}
-.cal-weekday,
-.cal-btn {
-  display: flex;
-  flex-shrink: 0;
-  align-items: center;
-  justify-content: center;
-  height: 3rem;
-  padding: 0;}
