--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -11,126 +11,129 @@
 <body>
   <h1>우측에 이름, 직급(담당업무)/비밀번호/이메일 변경 페이지로 이동</h1>
 
-
-  <section class="content">
-    <h2>매출관리</h2>
-    <div class="date">
-      <button>1주일</button>
-      <button>1개월</button>
-      <button>6개월</button>
-      <input type="date">
-      ~ &nbsp; &nbsp;
-      <input type="date">
-    </div>
+  <section class="content-box">
+    <div class="sideBar">사이드바</div>
   
-    <div class="graph-box">
-  
-      <div class="sales"> 
-        <div>거래액 : 0원</div>
-        <div>순거래액 : 0원</div>
-        <div>거래취소액 : 0원</div>
+    <div class="content">
+      <h2>매출관리</h2>
+      <div class="date">
+        <button>1주일</button>
+        <button>1개월</button>
+        <button>6개월</button>
+        <input type="date">
+        ~ &nbsp; &nbsp;
+        <input type="date">
       </div>
-  
-      <div class="content-box">
-        <div class="graph">
-          <div class="graph-title">
-            <div>거래액 그래프</div>
-            <div>클릭 된 버튼 / 정렬 기준</div>
-            
-            <div class="dropdown">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                전체 매출
-              </a>
-            
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">카테고리</a></li>
-                <li><a class="dropdown-item" href="#">출판사</a></li>
-                <li><a class="dropdown-item" href="#">온/오프라인</a></li>
-              </ul>
-            </div>
-
-          </div>
-          <div class="graph-section">
-            <a href="#">그래프 그릴거예여</a>
-          </div>
+    
+      <div class="graph-box">
+    
+        <div class="sales"> 
+          <div>거래액 : 0원</div>
+          <div>순거래액 : 0원</div>
+          <div>거래취소액 : 0원</div>
         </div>
+    
+        <div class="content-box">
+          <div class="graph">
+            <div class="graph-title">
+              <div>거래액 그래프</div>
+              <div>클릭 된 버튼 / 정렬 기준</div>
+              
+              <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  전체 매출
+                </a>
+              
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">카테고리</a></li>
+                  <li><a class="dropdown-item" href="#">출판사</a></li>
+                  <li><a class="dropdown-item" href="#">온/오프라인</a></li>
+                </ul>
+              </div>
   
-        <div class="salesRank">
-          <h2>판매 순위</h2>
-          <table class="sales-table">
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            <tr>
-              <th>1️⃣</th>
-              <td>책이름</td>
-              <td>카테고리</td>
-              <td>판매수량</td>
-              <td>수익</td>
-            </tr>
-            
-            
-          </table>
+            </div>
+            <div class="graph-section">
+              <a href="#">그래프 그릴거예여</a>
+            </div>
+          </div>
+    
+          <div class="salesRank">
+            <h2>판매 순위</h2>
+            <table class="sales-table">
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              <tr>
+                <th>1️⃣</th>
+                <td>책이름</td>
+                <td>카테고리</td>
+                <td>판매수량</td>
+                <td>수익</td>
+              </tr>
+              
+              
+            </table>
+          </div>
         </div>
       </div>
     </div>
