admin main 기능 설정 중, pagination DTO 설정

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -48,41 +48,47 @@
           <div class="salesRank">
             <h2>최근 가입 회원</h2>
             <table class="sales-table">
-              <tr>
-                <th>회원번호</th>
-                <td>회원 아이디</td>
-                <td>관심분야</td>
-                <td>문의 내용</td>
-              </tr>
-              <tr>
-                <th>2️⃣</th>
-                <td>책이름</td>
-                <td>매출량</td>
-                <td>상승 / 하강 화살표</td>
-              </tr>
-              <tr>
-                <th>3️⃣</th>
-                <td>책이름</td>
-                <td>매출량</td>
-                <td>상승 / 하강 화살표</td>
-              </tr>
-              <tr>
-                <th>4️⃣</th>
-                <td>책이름</td>
-                <td>매출량</td>
-                <td>상승 / 하강 화살표</td>
-              </tr>
-              <tr>
-                <th>5️⃣</th>
-                <td>책이름</td>
-                <td>매출량</td>
-                <td>상승 / 하강 화살표</td>
-              </tr>
+              <thead>
+                <tr>
+                  <th>회원번호</th>
+                  <td>회원 아이디</td>
+                  <td>관심분야</td>
+                  <td>문의 내용</td>
+                </tr>
+              </thead>
+              <tbody id="memberList">
+                <tr>
+                  <th>2️⃣</th>
+                  <td>책이름</td>
+                  <td>매출량</td>
+                  <td>상승 / 하강 화살표</td>
+                </tr>
+                <tr>
+                  <th>3️⃣</th>
+                  <td>책이름</td>
+                  <td>매출량</td>
+                  <td>상승 / 하강 화살표</td>
+                </tr>
+                <tr>
+                  <th>4️⃣</th>
+                  <td>책이름</td>
+                  <td>매출량</td>
+                  <td>상승 / 하강 화살표</td>
+                </tr>
+                <tr>
+                  <th>5️⃣</th>
+                  <td>책이름</td>
+                  <td>매출량</td>
+                  <td>상승 / 하강 화살표</td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <script src="/js/admin/main.js"></script>
 </body>
 </html>
