--- a/src/main/resources/static/css/admin/sales.css
+++ b/src/main/resources/static/css/admin/sales.css
@@ -6,12 +6,13 @@
   display: flex;
   flex-direction: row;
   align-items: start;
-  justify-content: space-between;
+  
 }
 
 .sideBar{
   width: 300px;
   height: 850PX;
+  margin-right: 50px;
 }
 
 .content{
