241112 // main java package update, html 구성 완료.

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/plagments/header.css" th:href="@{/css/plagments/header.css}">
+    <link rel="stylesheet" href="/css/plagments/header.css">
     <title>Header</title>
 </head>
 <body>
@@ -12,7 +10,7 @@
             <!-- 로고 -->
             <div class="logo">
                 <a href="/" th:href="@{/}">
-                    <img src="/images/logo.png" th:src="@{/images/logo.png}" alt="Logo">
+                    <img src="/images/logo.png" alt="Logo">
                 </a>
             </div>
 
