로그인 단어 오기입으로 수정

--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -64,9 +64,9 @@
 
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a>Login</a>
-                <a href="/join" class="headerJoinBtn">Join us</a>
-                <a href="/cart" class="headerCartBtn">Cart</a>
+                <a>로그인</a>
+                <a href="/join" class="headerJoinBtn">회원가입</a>
+                <a href="/cart" class="headerCartBtn">장바구니</a>
             </div>
 
             <button type="button" class="btn btn-primary" onclick="toggleModal()">로그인</button>
