--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -24,9 +24,9 @@
             
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a href="/login"class="headerLoginBtn">Login</a>
-                <a href="/join"class="headerJoinBtn">Join us</a>
-                <a href="/cart"class="headerCartBtn">Cart</a>
+                <a href="/login"class="headerLoginBtn">로그아웃</a>
+                <a href="/join"class="headerJoinBtn">회원가입</a>
+                <a href="/cart"class="headerCartBtn">장바구니</a>
             </div>
             
             <!-- 검색 바 -->
