20241112 로그인 백엔드 코드 작성 완료

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/plagments/header.css" th:href="@{/css/plagments/header.css}">
+    <link rel="stylesheet" href="/css/plagments/header.css">
     <title>Header</title>
 </head>
 <body>
@@ -11,7 +10,7 @@
             <!-- 로고 -->
             <div class="logo">
                 <a href="/" th:href="@{/}">
-                    <img src="/images/logo.png" th:src="@{/images/logo.png}" alt="Logo">
+                    <img src="/images/logo.png" alt="Logo">
                 </a>
             </div>
 
@@ -25,9 +24,9 @@
             
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a href="/login"class="headerLoginBtn">Login</a>
-                <a href="/join"class="headerJoinBtn">Join us</a>
-                <a href="/cart"class="headerCartBtn">Cart</a>
+                <a href="/login"class="headerLoginBtn">로그아웃</a>
+                <a href="/join"class="headerJoinBtn">회원가입</a>
+                <a href="/cart"class="headerCartBtn">장바구니</a>
             </div>
             
             <!-- 검색 바 -->
