--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -64,9 +64,9 @@
 
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a>Login</a>
-                <a href="/join" class="headerJoinBtn">Join us</a>
-                <a href="/cart" class="headerCartBtn">Cart</a>
+                <a>로그인</a>
+                <a href="/join" class="headerJoinBtn">회원가입</a>
+                <a href="/cart" class="headerCartBtn">장바구니</a>
             </div>
 
             <button type="button" class="btn btn-primary" onclick="toggleModal()">로그인</button>
@@ -104,9 +104,6 @@
                             <label for="floatingPassword">비밀번호를 입력하세요</label>
                         </div>
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">로그인</button>
-                        <input type="checkbox">
-                            <small class="text-body-secondary">로그인 상태 유지</small>
-                        </input>
                         <hr class="my-4">
                         <a href="signUp" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
                             회원가입
