--- a/src/main/resources/static/css/searchBookPage/allBook.css
+++ b/src/main/resources/static/css/searchBookPage/allBook.css
@@ -17,6 +17,7 @@ header {
   border-bottom: 2px solid #ccc;
   box-sizing: border-box;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 main {
@@ -41,8 +42,8 @@ main {
 }
 
 .book-item-image {
-  width: 80px;
-  height: 120px;
+  width: 100px;
+  height: 150px;
   background-color: #d8d8d8;
   display: flex;
   align-items: center;
@@ -57,47 +58,41 @@ main {
   gap: 5px;
 }
 
+.book-item-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .book-item-details p {
-  margin: 0;
+  margin: 5px 0;
 }
 
 .book-rating {
-  display: flex;
-  align-items: center;
-  gap: 5px;
   font-size: 14px;
   color: #333;
-  margin-top: 5px;
 }
 
 .book-item-actions {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .book-item-actions button {
-  width: 100px;
   padding: 10px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border: 2px solid #ccc;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .book-item-actions button:hover {
-  background-color: #d8d8d8;
+  background-color: #f0f0f0;
 }
 
-.book-item-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-
-.book-item-info div {
-  display: flex;
-  gap: 10px;
+.buttonBag, .buttonBuy, .buttonWish {
+  width: 100px;
+  text-align: center;
 }
