--- a/src/main/resources/templates/searchBookPage/allBook.html
+++ b/src/main/resources/templates/searchBookPage/allBook.html
@@ -29,9 +29,9 @@
         <p><strong>출간일:</strong> <span th:text="${book.bookDate}">출간일</span></p>
       </div>
       <div class="book-item-actions">
-        <button>장바구니</button>
-        <button>바로구매</button>
-        <button>찜</button>
+        <label class="buttonBag"><button>장바구니</button></label>
+        <label class="buttonBuy"><button>바로구매</button></label>
+       <label class="buttonWish"> <button>찜</button></label>
       </div>
     </div>
   </main>
