--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -17,13 +17,12 @@
   
     <div class="content">
       <h1>회원가입 현황</h1>
-      <div class="date">
-        <button>1주일</button>
-        <button>1개월</button>
-        <button>6개월</button>
-        <input type="date">
-        ~ &nbsp; &nbsp;
-        <input type="date">
+      <div class="sort-dropdown">
+        <select id="sortSelect">
+            <option value="weeks">1주일</option>
+            <option value="month">1개월</option>
+            <option value="6month">6개월</option>
+        </select>
       </div>
     
       <div class="graph-box">
@@ -51,12 +50,14 @@
               <thead>
                 <tr>
                   <th>회원번호</th>
-                  <td>회원 아이디</td>
-                  <td>관심분야</td>
-                  <td>문의 내용</td>
+                  <th>회원 아이디</th>
+                  <th>가입일</th>
+                  <th>최근 로그인</th>
+                  <th>탈퇴 처리</th>
                 </tr>
               </thead>
-              <tbody id="memberList">
+
+              <tbody id="list">
                 <tr>
                   <th>2️⃣</th>
                   <td>책이름</td>
@@ -83,6 +84,12 @@
                 </tr>
               </tbody>
             </table>
+            <div class="pagination-area" >
+              <ul class="pagination">
+              
+                
+              </ul>
+            </div>
           </div>
         </div>
       </div>
